--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="row">
         <div class="container">
-            <h1 class="title">Will You Be My Valentines</h1>
+            <h1 class="title">Will You Be My Valentines?</h1>
             <div class="cat-img">
                 <img src="cute_cat.gif" alt="Animated Cat" height=450px;>
             </div>
